--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,2 @@
-.venv/
-*.pyc
-__pycache__/
-instance/
-.cache/
-.pytest_cache/
-.coverage
-htmlcov/
-dist/
-build/
-*.egg-info/
-.idea/
-*.swp
-*~
-**/config.py
+# Ignore config files
+config.py
